add elements of names and email address

--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 
 <body>
   <div class="container">
+    <div class="title">
+      Contact Us
+    </div>
 
-    Contact Us
+    <form action="submit">
+      <label for="firstName">First Name</label>
+      <input type="text" id="firstName" required>
+      <label for="lastName">Last Name</label>
+      <input type="text" id="lastName" required>
+      <label for="email">Email Address</label>
+      <input type="email" name="email" id="email">
+      
 
-    First Name
-    This field is required
-
-    Last Name
-    This field is required
+    </form>
 
     Email Address
     Please enter a valid email address
